<resources>
    <string name="app_name">What the Dog</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="Genre">
        <item>Homme</item>
        <item>Femme</item>
        <item>Autre</item>
    </string-array>
    <string-array name="Etat">
        <item>Vaud</item>
        <item>Berne</item>
        <item>Geneve</item>
    </string-array>
    <string name="menu_list_dog">Liste dog</string>
    <string name="menu_list_race">Liste race</string>
    <string name="menu_list_maladie">Liste maladie</string>
    <string name="menu_dog">Dog</string>
    <string name="menu_race">Race</string>
    <string name="menu_maladie">Maladie</string>
    <string name="race">Beagle   Golden   Retriver   Labradore   Shibazu</string>
    <string name="job">Chasse   Compagnon   Garde   Travail</string>
    <string name="maladie">Zoonose   Prévention   Symptômes</string>
    <string name="client">Client</string>
    <string name="listclient">Liste client</string>
    <string name="cr_e_un_rdv">Crée un RDV</string>
    <string name="liste_des_services">Liste des services</string>
    <string name="menu_create_dog">Créer un chien</string>
    <string name="menu_services_detail">Service Detail</string>
    <string name="list_appointments">Liste des RDV</string>
    <string-array name="service">
        <item>"Coaching en comportement"</item>
        <item>"Cours d'education prives"</item>
        <item>"Conseils personnalises"</item>
        <item>"Accompagnement face a la peur des chiens"</item>
    </string-array>
</resources>