<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_create_dog"
            android:icon="@mipmap/ic_launcher_foreground"
            android:title="@string/menu_create_dog" />
        <item
            android:id="@+id/nav_creat_client"
            android:icon="@mipmap/ic_launcher_foreground"
            android:title="@string/client" />
        <item
            android:id="@+id/nav_list_client"
            android:icon="@mipmap/ic_launcher_foreground"
            android:title="@string/listclient" />
        <item
            android:id="@+id/nav_create_rdv"
            android:icon="@mipmap/ic_launcher_foreground"
            android:title="@string/cr_e_un_rdv" />
        <item
            android:id="@+id/nav_service_list"
            android:icon="@mipmap/ic_launcher_foreground"
            android:title="@string/liste_des_services" />
        <item
            android:id="@+id/nav_list_dog"
            android:icon="@mipmap/ic_launcher_foreground"
            android:title="@string/menu_list_dog" />
        <item
            android:id="@+id/nav_dog"
            android:icon="@mipmap/ic_launcher_foreground"
            android:title="@string/menu_dog" />
        <item
            android:id="@+id/nav_list_race"
            android:icon="@mipmap/ic_launcher_foreground"
            android:title="@string/menu_list_race" />
        <item
            android:id="@+id/nav_race"
            android:icon="@mipmap/ic_launcher_foreground"
            android:title="@string/menu_race" />
        <item
            android:id="@+id/nav_list_maladie"
            android:icon="@mipmap/ic_launcher_foreground"
            android:title="@string/menu_list_maladie" />
        <item
            android:id="@+id/nav_maladie"
            android:icon="@mipmap/ic_launcher_foreground"
            android:title="@string/menu_maladie" />

    </group>
</menu>