<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ch.cpnv.what_the_dog.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ch.cpnv.what_the_dog.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ch.cpnv.what_the_dog.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_service_detail"
        android:name="ch.cpnv.what_the_dog.ServiceDetailFragment"
        android:label="@string/menu_services_detail"
        tools:layout="@layout/fragment_service_detail" />
    <fragment
        android:id="@+id/nav_list_dog"
        android:name="ch.cpnv.what_the_dog.ListDogFragment"
        android:label="@string/menu_list_dog"
        tools:layout="@layout/fragment_list_dog" />
    <fragment
        android:id="@+id/nav_create_rdv"
        android:name="ch.cpnv.what_the_dog.CreateRdv"
        android:label="@string/cr_e_un_rdv"
        tools:layout="@layout/fragment_create_rdv" />
    <fragment
        android:id="@+id/nav_service_list"
        android:name="ch.cpnv.what_the_dog.ServiceList"
        android:label="@string/liste_des_services"
        tools:layout="@layout/fragment_service_list" />
    <fragment
        android:id="@+id/nav_list_client"
        android:name="ch.cpnv.what_the_dog.ListClientFragment"
        android:label="@string/listclient"
        tools:layout="@layout/fragment_list_client" />
    <fragment
        android:id="@+id/nav_dog"
        android:name="ch.cpnv.what_the_dog.DogFragment"
        android:label="@string/menu_dog"
        tools:layout="@layout/fragment_dog" />
    <fragment
        android:id="@+id/nav_list_race"
        android:name="ch.cpnv.what_the_dog.fragments.breed.ListBreedFragment"
        android:label="@string/menu_list_race"
        tools:layout="@layout/fragment_list_breed" >
        <action
            android:id="@+id/action_nav_list_race_to_nav_add_breed"
            app:destination="@id/nav_add_breed" />
    </fragment>
    <fragment
        android:id="@+id/nav_race"
        android:name="ch.cpnv.what_the_dog.fragments.breed.BreedFragment"
        android:label="@string/menu_race"
        tools:layout="@layout/fragment_breed" />
    <fragment
        android:id="@+id/nav_list_maladie"
        android:name="ch.cpnv.what_the_dog.ListMaladieFragment"
        android:label="@string/menu_list_maladie"
        tools:layout="@layout/fragment_list_maladie" />
    <fragment
        android:id="@+id/nav_maladie"
        android:name="ch.cpnv.what_the_dog.MaladieFragment"
        android:label="@string/menu_maladie"
        tools:layout="@layout/fragment_maladie" />
    <fragment
        android:id="@+id/nav_creat_client"
        android:name="ch.cpnv.what_the_dog.CreationClientFragment"
        android:label="@string/menu_dog"
        tools:layout="@layout/fragment_creation_client" />

    <fragment
        android:id="@+id/nav_create_dog"
        android:name="ch.cpnv.what_the_dog.fragment_create_dog"
        android:label="@string/menu_create_dog"
        tools:layout="@layout/fragment_create_dog" />

    <fragment
        android:id="@+id/nav_list_appointment"
        android:name="ch.cpnv.what_the_dog.list_appointments"
        android:label="@string/list_appointments"
        tools:layout="@layout/fragment_create_dog" />
    <fragment
        android:id="@+id/nav_add_breed"
        android:name="ch.cpnv.what_the_dog.fragments.breed.AddBreedFragment"
        android:label="fragment_add_breed"
        tools:layout="@layout/fragment_add_breed" >
        <action
            android:id="@+id/action_nav_add_breed_to_nav_list_race"
            app:destination="@id/nav_list_race" />
    </fragment>
</navigation>